[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://Corpse.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 12.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Handpivot/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "shoot"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Handpivot/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.045972, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11, 0 ), Vector2( 10, -1 ), Vector2( 11, 0 ) ]
}

[node name="Enemy" type="KinematicBody2D" groups=["cleared", "hittable"]]
script = ExtResource( 2 )
corpse = ExtResource( 4 )

[node name="Icon2" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -2.27374e-13, -19 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="Icon" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.2, 0.4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Handpivot" type="Node2D" parent="."]
position = Vector2( 0, -11 )

[node name="Hand" type="Node2D" parent="Handpivot"]
position = Vector2( 11, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/shoot = SubResource( 3 )

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="movement_timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="movement_timer" to="." method="_on_movement_timer_timeout"]
